Adicionado rotas de credenciais juntamente com sua documentação e iniciado a implementação do Keycloack
